tests/fixtures/invalid/bool_div_none.py
# Cannot divide Bool and None
x: float = True / None
